# Aerosync

./: .gitignore  Backend.sln  CMakeLists.txt  OOP-Aerosync.files  flights.txt  users.txt
AeroSync/: Admin.h  AdminDashboard.cpp  AdminDashboard.h  AppContext.h  Booking.h  BookingRepository.h  CMakeLists.txt  ChangePasswordDialog.cpp  ChangePasswordDialog.h  DateTime.h  Flight.h  FlightRepository.h  Parser.h  Payment.h  PaymentRepository.h  Person.h  ProfitCalculator.h  Receipt.h  ReceiptRepository.h  Seat.h  User.h  UserDashboard.cpp  UserDashboard.h  UserRepository.h  loginwindow.cpp  loginwindow.h  main.cpp
Backend/: Booking.cpp  Booking.h  BookingRepository.h  Flight.h  FlightRepository.h  Main.cpp  Parser.h  PaymentRepository.h  Payments.txt  Profit Calculator.h  Receipt.cpp  Receipt.h  ReceiptRepository.h  Seat.h  Vector.h  bookings.txt  flights.txt  repo 3.vcxproj  repo 3.vcxproj.filters  test file.cpp  userRepository.h  users.txt
repo 3/: Admin.h  Booking.cpp  Booking.h  BookingRepository.h  DateTime.h  Flight.h  FlightRepository.h  Main.cpp  Parser.h  Payment.h  PaymentRepository.h  Payments.txt  Person.h  Profit Calculator.h  Receipt.cpp  Receipt.h  ReceiptRepository.h  Seat.h  User.h  Vector.h  bookings.txt  flights.txt  receipts.txt  repo 3.cpp  repo 3.vcxproj  repo 3.vcxproj.filters  test file.cpp  userRepository.h  users.txt
